Upgraded to 15.3 and tested. Rationalised some dependencies.